# ffrust

./: .gitignore  Cargo.toml  NOTES.md  README.md  print.html  searchindex.js  searchindex.json
.github/workflows/: book-pages.yaml
assets/: chart01  packed.json
docs/src/prototypes/: sn01.md
prototypes/: sn01.html  sn02.html
src/: lib.rs  main.rs  note.rs  render_note.rs  render_pipeline.rs  renderer.rs
src/extras/: colored_squares.rs
src/shader/: arrow.fs  arrow.vs
wasm/: assets  index.html
www/: index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: index.ts
