[package]
name = "ffrust"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2018"
description = "Rust example for a web based FFR."
repository = "https://github.com/Zageron/ffrust"
license = "AGPL-3.0-only"

[features]
default = ["bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png"]

native = ["bevy/bevy_wgpu"]

web = ["bevy_webgl2"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "1398d7833007e85198cfd35d5fabc70b51b4db31", default-features = false }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", optional = true }
winit = "0.23.0"

[profile.dev]
opt-level = 's'

[profile.release]
lto = true
opt-level = 's'
