[package]
name = "ffrust"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2018"
description = "Rust example for a web based FFR."
repository = "https://github.com/Zageron/ffrust"
license = "AGPL-3.0-only"

[features]
default = ["bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png"]

native = ["bevy/bevy_wgpu"]

web = ["bevy_webgl2"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "d2e4327b14956b5028838fda538d45d2300e73f9", default-features = false }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", rev = "e1576c97ea4de6bbb8198a1969c9bb489715e31c", optional = true }
winit = { version = "0.24.0", features = ["web-sys"], default-features = false }

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true
