[package]
name = "ffrust"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2018"
description = "Rust example for a web based FFR."
repository = "https://github.com/Zageron/ffrust"
license = "AGPL-3.0-only"

[features]
default = ["bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png"]

native = ["bevy/bevy_wgpu"]

web = ["bevy_webgl2"]

[dependencies]
bevy = { version = "0.4.0", default-features = false }
bevy_webgl2 = { version = "0.4.0", optional = true }
winit = { version = "0.24.0", features = ["web-sys"] }
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true
